2019-06-01 django, decorators, remote device interactions.

--- a/device interactions.ipynb
+++ b/device interactions.ipynb
@@ -908,6 +908,377 @@
    "source": [
     "# show the menu to the user: to create,update,delete,get an instances from the any product.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.system(\"mkdir f1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir(\"f1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"ls\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from subprocess import check_output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = check_output(\"ls\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'a.html\\na.py\\nAssignments.odt\\nbackup session.ipynb\\ncomprehensions.ipynb\\nconditional statements.ipynb\\ndata\\ndatabases.ipynb\\ndata.csv\\ndb.sqlite3\\ndevice interactions.ipynb\\ndictionaries.ipynb\\nexceptions.ipynb\\nexcept.py\\nexec1.jpg\\nexec.jpg\\nfiles.ipynb\\nfunctions.ipynb\\nfun_mem1.jpg\\nhello.py\\nint_mem2.jpg\\nint_mem.jpg\\niot_bkp1.jpg\\niot.jpg\\nlist_mem.jpg\\nlists, tuple.ipynb\\nlog.txt\\nloop_1.jpg\\nlooping statements.ipynb\\nmodules\\noops.ipynb\\noops.jpg\\nprint function.ipynb\\n__pycache__\\nregular expressions.ipynb\\nsets.ipynb\\nstring_list_mem.jpg\\nstring_mem.jpg\\nstrings.ipynb\\nUntitled1.ipynb\\nUntitled2.ipynb\\nUntitled3.ipynb\\nUntitled.ipynb\\nvars.ipynb\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fabrick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paramiko as pmk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssh = pmk.SSHClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SSHException",
+     "evalue": "Server 'localhost' not found in known_hosts",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSSHException\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-da367160f029>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mssh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"localhost\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0musername\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"khyaathipython\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"python\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/paramiko/client.py\u001b[0m in \u001b[0;36mconnect\u001b[0;34m(self, hostname, port, username, password, pkey, key_filename, timeout, allow_agent, look_for_keys, compress, sock, gss_auth, gss_kex, gss_deleg_creds, gss_host, banner_timeout, auth_timeout, gss_trust_dns, passphrase)\u001b[0m\n\u001b[1;32m    405\u001b[0m                 \u001b[0;31m# will raise exception if the key is rejected\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m                 self._policy.missing_host_key(\n\u001b[0;32m--> 407\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mserver_hostkey_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mserver_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m                 )\n\u001b[1;32m    409\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/paramiko/client.py\u001b[0m in \u001b[0;36mmissing_host_key\u001b[0;34m(self, client, hostname, key)\u001b[0m\n\u001b[1;32m    807\u001b[0m         )\n\u001b[1;32m    808\u001b[0m         raise SSHException(\n\u001b[0;32m--> 809\u001b[0;31m             \u001b[0;34m\"Server {!r} not found in known_hosts\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhostname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    810\u001b[0m         )\n\u001b[1;32m    811\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSSHException\u001b[0m: Server 'localhost' not found in known_hosts"
+     ]
+    }
+   ],
+   "source": [
+    "ssh.connect(\"localhost\",username=\"khyaathipython\",password=\"python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssh.set_missing_host_key_policy(pmk.AutoAddPolicy())\n",
+    "ssh.connect(\"localhost\",username=\"khyaathipython\",password=\"python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<paramiko.ChannelFile from <paramiko.Channel 0 (open) window=2097152 -> <paramiko.Transport at 0xd8304a90 (cipher aes128-ctr, 128 bits) (active; 1 open channel(s))>>>,\n",
+       " <paramiko.ChannelFile from <paramiko.Channel 0 (open) window=2097152 -> <paramiko.Transport at 0xd8304a90 (cipher aes128-ctr, 128 bits) (active; 1 open channel(s))>>>,\n",
+       " <paramiko.ChannelFile from <paramiko.Channel 0 (open) window=2097152 -> <paramiko.Transport at 0xd8304a90 (cipher aes128-ctr, 128 bits) (active; 1 open channel(s))>>>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssh.exec_command(\"mkdir local\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp, outp, errp = ssh.exec_command(\"mkdir local\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'mkdir: cannot create directory \\xe2\\x80\\x98local\\xe2\\x80\\x99: File exists\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errp.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp, outp, errp = ssh.exec_command(\"mkdir remote\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b''"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errp.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp, outp, errp = ssh.exec_command(\"ls\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'ALL PYTHON\\nanaconda3\\nbatch52\\nbatch53\\nbatch54\\nbatch54.zip\\nbatch55\\nbatch56\\nbatch57\\nbatch58\\nbatch59\\nbatch60\\nbatch61\\ncontent\\ndata.yml\\ndeployment steps.text\\nDesktop\\ndjangobatch8\\nDocuments\\nDownloads\\nexamples.desktop\\nf1\\nfile2.py\\nhello.py\\nlocal\\nMusic\\nnew_repo\\npgmanagement\\nPictures\\nPublic\\n__pycache__\\npython content.txt\\nremote\\nrequirements.txt\\nsnap\\nsort.py\\nTemplates\\nVideos\\nware.py\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = outp.read()\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp, outp, errp = ssh.exec_command(\"sudo ls /proc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b''"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outp.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp, outp, errp = ssh.exec_command(\"echo python|sudo -S ls /proc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = outp.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'1\\n10\\n1020\\n10839\\n10880\\n10918\\n11\\n11421\\n11437\\n115\\n12\\n12747\\n12753\\n13\\n1306\\n1307\\n1308\\n1309\\n1310\\n1311\\n1317\\n1330\\n1357\\n1362\\n1364\\n1372\\n1373\\n1385\\n1388\\n1391\\n1395\\n14\\n1411\\n1412\\n1419\\n1421\\n1424\\n1425\\n1433\\n14332\\n14352\\n1437\\n1441\\n1442\\n1443\\n1444\\n1445\\n1448\\n1451\\n1464\\n1467\\n1468\\n1488\\n15\\n1523\\n1538\\n1562\\n1563\\n1576\\n15794\\n1580\\n1582\\n1587\\n15895\\n1591\\n16\\n16004\\n16022\\n16033\\n16077\\n16078\\n16079\\n16453\\n16478\\n165\\n16590\\n166\\n16616\\n16706\\n16707\\n16709\\n168\\n16964\\n16995\\n17\\n17029\\n1710\\n1712\\n17143\\n17177\\n1718\\n17199\\n17204\\n1721\\n17297\\n17332\\n17334\\n17335\\n1739\\n1745\\n1751\\n1762\\n1772\\n1776\\n1778\\n1780\\n1791\\n1795\\n18\\n1801\\n1818\\n1819\\n1827\\n1831\\n1835\\n1840\\n1844\\n1845\\n1847\\n1848\\n1850\\n1855\\n1856\\n1858\\n1860\\n1873\\n1875\\n1876\\n1878\\n188\\n1880\\n1882\\n1884\\n1885\\n189\\n19\\n1901\\n1945\\n1946\\n1947\\n1969\\n1998\\n2\\n20\\n2024\\n2033\\n2040\\n2052\\n2063\\n2081\\n2095\\n21\\n2161\\n22\\n227\\n23\\n24\\n244\\n25\\n26\\n27\\n2721\\n28\\n29\\n30\\n32\\n327\\n328\\n329\\n330\\n331\\n332\\n333\\n334\\n335\\n336\\n337\\n338\\n339\\n34\\n35\\n357\\n358\\n359\\n36\\n360\\n361\\n362\\n363\\n364\\n365\\n366\\n367\\n368\\n369\\n370\\n371\\n372\\n373\\n393\\n397\\n399\\n4\\n414\\n572\\n573\\n576\\n584\\n588\\n590\\n6\\n604\\n611\\n6114\\n612\\n613\\n614\\n616\\n619\\n674\\n681\\n7\\n711\\n727\\n736\\n737\\n744\\n751\\n760\\n78\\n79\\n8\\n80\\n81\\n82\\n825\\n8267\\n8277\\n8296\\n83\\n8309\\n8314\\n836\\n838\\n8387\\n847\\n852\\n8777\\n8795\\n89\\n9\\n9073\\n9094\\n917\\n919\\n921\\n958\\n98\\nacpi\\nasound\\nbuddyinfo\\nbus\\ncgroups\\ncmdline\\nconsoles\\ncpuinfo\\ncrypto\\ndevices\\ndiskstats\\ndma\\ndriver\\nexecdomains\\nfb\\nfilesystems\\nfs\\ninterrupts\\niomem\\nioports\\nirq\\nkallsyms\\nkcore\\nkeys\\nkey-users\\nkmsg\\nkpagecgroup\\nkpagecount\\nkpageflags\\nloadavg\\nlocks\\nmdstat\\nmeminfo\\nmisc\\nmodules\\nmounts\\nmtrr\\nnet\\npagetypeinfo\\npartitions\\nsched_debug\\nschedstat\\nscsi\\nself\\nslabinfo\\nsoftirqs\\nstat\\nswaps\\nsys\\nsysrq-trigger\\nsysvipc\\nthread-self\\ntimer_list\\ntty\\nuptime\\nversion\\nversion_signature\\nvmallocinfo\\nvmstat\\nzoneinfo\\n'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sftp = ssh.open_sftp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SFTPAttributes: [ size=15 uid=1000 gid=1000 mode=0o100664 atime=1559354545 mtime=1559354545 ]>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sftp.put(\"/home/khyaathipython/local/a.py\",\"/home/khyaathipython/remote/a1.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sftp.get(\"/home/khyaathipython/remote/a1.py\",\"/home/khyaathipython/local/a2.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to connect to windows machines :https://pypi.org/project/pywinrm/0.2.2/"
+   ]
   }
  ],
  "metadata": {
